--- a/index.html
+++ b/index.html
@@ -6,47 +6,45 @@
   <title>Franco Events</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* Reset & Base */
+    /* Base */
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
-    body { background-color: #fff; color: #333; line-height: 1.6; }
-    a { text-decoration: none; color: inherit; }
+    body { background-color: #000; color: #fff; line-height: 1.6; }
+    a { color: inherit; text-decoration: none; }
 
     /* Navbar */
-    nav { display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; background: #fff; position: sticky; top: 0; border-bottom: 1px solid #eee; z-index: 100; }
-    nav .logo { font-weight: 700; font-size: 1.5rem; color: #D4AF37; }
+    nav { display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; background: #000; border-bottom: 1px solid #fff; }
+    nav .logo { font-weight: 700; font-size: 1.5rem; }
     nav ul { display: flex; gap: 2rem; list-style: none; }
-    nav ul li { font-weight: 500; }
-    nav ul li a:hover { color: #D4AF37; }
+    nav ul li:hover { color: #bbb; }
 
-    /* Hero Section */
-    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 100vh; background: url('snack-cart.jpg') center/cover no-repeat; color: #fff; }
-    .hero h1 { font-size: 3rem; margin-bottom: 1rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; text-shadow: 1px 1px 3px rgba(0,0,0,0.5); }
-    .hero button { padding: 0.75rem 2rem; font-size: 1rem; background-color: #D4AF37; border: none; border-radius: 5px; cursor: pointer; }
-    .hero button:hover { background-color: #b9922b; }
+    /* Hero */
+    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 80vh; background: #111; }
+    .hero h1 { font-size: 3rem; margin-bottom: 1rem; }
+    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
+    .hero button { padding: 0.75rem 2rem; font-size: 1rem; background-color: #fff; color: #000; border: none; border-radius: 5px; cursor: pointer; }
+    .hero button:hover { background-color: #ccc; }
 
-    /* Menu Section */
-    .menu { padding: 5rem 2rem; background: #f9f9f9; text-align: center; }
-    .menu h2 { font-size: 2.5rem; margin-bottom: 2rem; color: #333; }
+    /* Menu */
+    .menu { padding: 5rem 2rem; text-align: center; background: #111; }
+    .menu h2 { font-size: 2.5rem; margin-bottom: 2rem; }
     .menu-cards { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; }
-    .card { background: #fff; border-radius: 10px; padding: 2rem; width: 250px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: transform 0.3s; }
+    .card { background: #000; border-radius: 10px; padding: 2rem; width: 250px; border: 1px solid #fff; transition: transform 0.3s; }
     .card:hover { transform: translateY(-5px); }
-    .card h3 { color: #D4AF37; margin-bottom: 1rem; }
-    .card p { font-size: 0.95rem; }
 
-    /* Contact Section */
+    /* Contact / Inquiry Form */
     .contact { padding: 5rem 2rem; text-align: center; }
-    .contact h2 { font-size: 2.5rem; margin-bottom: 2rem; color: #333; }
+    .contact h2 { font-size: 2.5rem; margin-bottom: 2rem; }
     form { max-width: 500px; margin: 0 auto; display: flex; flex-direction: column; gap: 1rem; }
-    input, textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #ccc; font-size: 1rem; }
-    button.submit { padding: 0.75rem; background-color: #D4AF37; border: none; color: #fff; font-weight: 600; border-radius: 5px; cursor: pointer; }
-    button.submit:hover { background-color: #b9922b; }
+    input, textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #fff; background: #000; color: #fff; font-size: 1rem; }
+    input::placeholder, textarea::placeholder { color: #bbb; }
+    button.submit { padding: 0.75rem; background-color: #fff; color: #000; font-weight: 600; border: none; border-radius: 5px; cursor: pointer; }
+    button.submit:hover { background-color: #ccc; }
 
     /* Footer */
-    footer { padding: 2rem; text-align: center; border-top: 1px solid #eee; font-size: 0.9rem; color: #777; }
+    footer { padding: 2rem; text-align: center; border-top: 1px solid #fff; font-size: 0.9rem; color: #bbb; }
 
     /* Responsive */
-    @media(max-width: 768px) {
+    @media(max-width: 768px) { 
       .menu-cards { flex-direction: column; align-items: center; }
       nav ul { flex-direction: column; gap: 1rem; margin-top: 1rem; }
       .hero h1 { font-size: 2.2rem; }
@@ -65,42 +63,42 @@
     </ul>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero" id="home">
     <h1>Mini Pancakes, Mexican Elote & Charcuterie</h1>
     <p>Perfect snacks & boards for every event</p>
-    <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Book Your Cart</button>
+    <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Inquire Now</button>
   </section>
 
-  <!-- Menu Section -->
+  <!-- Menu -->
   <section class="menu" id="menu">
     <h2>Our Offerings</h2>
     <div class="menu-cards">
       <div class="card">
         <h3>Mini Pancakes</h3>
-        <p>Fluffy mini pancakes with a variety of toppings including fresh fruits, chocolate drizzle, and whipped cream.</p>
+        <p>Fluffy mini pancakes with fresh fruits, chocolate drizzle, and whipped cream.</p>
       </div>
       <div class="card">
-        <h3>Mexican Elote Snacks</h3>
-        <p>Classic street-style corn with mayo, cheese, chili powder, lime, and other tasty twists.</p>
+        <h3>Mexican Elote</h3>
+        <p>Classic street-style corn with mayo, cheese, chili powder, and lime.</p>
       </div>
       <div class="card">
-        <h3>Charcuterie Boards</h3>
-        <p>Gourmet boards with cheeses, meats, fruits, and nuts—perfect for any occasion.</p>
+        <h3>Charcuterie</h3>
+        <p>Gourmet boards with cheeses, meats, fruits, and nuts for any occasion.</p>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contact / Inquiry Form -->
   <section class="contact" id="contact">
-    <h2>Book Your Cart</h2>
-    <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+    <h2>Send an Inquiry</h2>
+    <form action="https://formspree.io/f/yourformid" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <input type="date" name="eventdate" placeholder="Event Date" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
       <input type="text" name="eventtype" placeholder="Event Type" required>
+      <input type="date" name="eventdate" required>
       <textarea name="message" rows="4" placeholder="Additional Details"></textarea>
-      <button type="submit" class="submit">Send Booking Request</button>
+      <button type="submit" class="submit">Send Inquiry</button>
     </form>
   </section>
 
