--- a/index.html
+++ b/index.html
@@ -4,50 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Franco Events</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Base */
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
-    body { background-color: #000; color: #fff; line-height: 1.6; }
+    body { background-color: #fff; color: #000; line-height: 1.6; }
     a { color: inherit; text-decoration: none; }
 
     /* Navbar */
-    nav { display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; background: #000; border-bottom: 1px solid #fff; }
-    nav .logo { font-weight: 700; font-size: 1.5rem; }
+    nav { display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; background: #fff; border-bottom: 1px solid #ddd; }
+    nav .logo { font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.5rem; }
     nav ul { display: flex; gap: 2rem; list-style: none; }
-    nav ul li:hover { color: #bbb; }
+    nav ul li:hover { color: #555; }
 
     /* Hero */
-    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 80vh; background: #111; }
-    .hero h1 { font-size: 3rem; margin-bottom: 1rem; }
+    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 80vh; background: #f5f5f5; }
+    .hero h1 { font-family: 'Playfair Display', serif; font-size: 3rem; margin-bottom: 1rem; }
     .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .hero button { padding: 0.75rem 2rem; font-size: 1rem; background-color: #fff; color: #000; border: none; border-radius: 5px; cursor: pointer; }
-    .hero button:hover { background-color: #ccc; }
+    .hero button { padding: 0.75rem 2rem; font-size: 1rem; background-color: #000; color: #fff; border: none; border-radius: 5px; cursor: pointer; }
+    .hero button:hover { background-color: #333; }
+
+    /* About Section */
+    .about { padding: 5rem 2rem; text-align: center; }
+    .about h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
+    .about p { font-size: 1.1rem; max-width: 600px; margin: 0 auto; color: #333; }
+    .about img { width: 80px; margin-top: 1rem; }
 
     /* Menu */
-    .menu { padding: 5rem 2rem; text-align: center; background: #111; }
-    .menu h2 { font-size: 2.5rem; margin-bottom: 2rem; }
+    .menu { padding: 5rem 2rem; text-align: center; }
+    .menu h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
     .menu-cards { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; }
-    .card { background: #000; border-radius: 10px; padding: 2rem; width: 250px; border: 1px solid #fff; transition: transform 0.3s; }
+    .card { background: #fff; border-radius: 10px; padding: 2rem; width: 250px; border: 1px solid #ddd; transition: transform 0.3s; text-align: center; }
     .card img { width: 80px; margin-bottom: 1rem; }
     .card:hover { transform: translateY(-5px); }
 
-    /* About Section */
-    .about { padding: 5rem 2rem; text-align: center; background: #111; }
-    .about h2 { font-size: 2.5rem; margin-bottom: 2rem; }
-    .about p { font-size: 1.1rem; max-width: 600px; margin: 0 auto; color: #ccc; }
-
     /* Contact / Inquiry Form */
-    .contact { padding: 5rem 2rem; text-align: center; }
-    .contact h2 { font-size: 2.5rem; margin-bottom: 2rem; }
+    .contact { padding: 5rem 2rem; text-align: center; background: #f5f5f5; }
+    .contact h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
     form { max-width: 500px; margin: 0 auto; display: flex; flex-direction: column; gap: 1rem; }
-    input, textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #fff; background: #000; color: #fff; font-size: 1rem; }
-    input::placeholder, textarea::placeholder { color: #bbb; }
-    button.submit { padding: 0.75rem; background-color: #fff; color: #000; font-weight: 600; border: none; border-radius: 5px; cursor: pointer; }
-    button.submit:hover { background-color: #ccc; }
+    input, textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #ccc; background: #fff; color: #000; font-size: 1rem; }
+    input::placeholder, textarea::placeholder { color: #888; }
+    button.submit { padding: 0.75rem; background-color: #000; color: #fff; font-weight: 600; border: none; border-radius: 5px; cursor: pointer; }
+    button.submit:hover { background-color: #333; }
 
     /* Footer */
-    footer { padding: 2rem; text-align: center; border-top: 1px solid #fff; font-size: 0.9rem; color: #bbb; }
+    footer { padding: 2rem; text-align: center; border-top: 1px solid #ddd; font-size: 0.9rem; color: #555; }
 
     /* Responsive */
     @media(max-width: 768px) { 
@@ -81,8 +82,7 @@
   <section class="about" id="about">
     <h2>About Us</h2>
     <p>We are a local Tulsa business ready to serve any type of celebration, big or small. From birthdays to corporate events, Franco Events brings delicious snacks and beautifully curated charcuterie boards to make your event unforgettable.</p>
-    <!-- Example clipart placeholder -->
-    <img src="https://img.icons8.com/ios-filled/100/ffffff/party.png" alt="party clipart" />
+    <img src="https://img.icons8.com/ios-filled/100/000000/party.png" alt="party clipart" />
   </section>
 
   <!-- Menu -->
@@ -90,17 +90,17 @@
     <h2>Our Offerings</h2>
     <div class="menu-cards">
       <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/ffffff/pancakes.png" alt="mini pancakes">
+        <img src="https://img.icons8.com/ios-filled/100/000000/pancakes.png" alt="mini pancakes">
         <h3>Mini Pancakes</h3>
         <p>Fluffy mini pancakes with fresh fruits, chocolate drizzle, and whipped cream.</p>
       </div>
       <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/ffffff/corn.png" alt="Mexican elote">
+        <img src="https://img.icons8.com/ios-filled/100/000000/corn.png" alt="Mexican elote">
         <h3>Mexican Elote</h3>
         <p>Classic street-style corn with mayo, cheese, chili powder, and lime.</p>
       </div>
       <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/ffffff/cheese.png" alt="charcuterie">
+        <img src="https://img.icons8.com/ios-filled/100/000000/cheese.png" alt="charcuterie">
         <h3>Charcuterie</h3>
         <p>Gourmet boards with cheeses, meats, fruits, and nuts for any occasion.</p>
       </div>
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
