--- a/index.html
+++ b/index.html
@@ -1,130 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Franco Events</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    /* Base */
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
-    body { background-color: #fff; color: #000; line-height: 1.6; }
-    a { color: inherit; text-decoration: none; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Franco Events</title>
 
-    /* Navbar */
-    nav { display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem; background: #fff; border-bottom: 1px solid #ddd; }
-    nav .logo { font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.5rem; }
-    nav ul { display: flex; gap: 2rem; list-style: none; }
-    nav ul li:hover { color: #555; }
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    /* Hero */
-    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 80vh; background: #f5f5f5; }
-    .hero h1 { font-family: 'Playfair Display', serif; font-size: 3rem; margin-bottom: 1rem; }
-    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .hero button { padding: 0.75rem 2rem; font-size: 1rem; background-color: #000; color: #fff; border: none; border-radius: 5px; cursor: pointer; }
-    .hero button:hover { background-color: #333; }
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
 
-    /* About Section */
-    .about { padding: 5rem 2rem; text-align: center; }
-    .about h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
-    .about p { font-size: 1.1rem; max-width: 600px; margin: 0 auto; color: #333; }
-    .about img { width: 80px; margin-top: 1rem; }
+body {
+  font-family: 'Poppins', sans-serif;
+  background:#ffffff;
+  color:#000;
+  line-height:1.6;
+  scroll-behavior:smooth;
+}
 
-    /* Menu */
-    .menu { padding: 5rem 2rem; text-align: center; }
-    .menu h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
-    .menu-cards { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; }
-    .card { background: #fff; border-radius: 10px; padding: 2rem; width: 250px; border: 1px solid #ddd; transition: transform 0.3s; text-align: center; }
-    .card img { width: 80px; margin-bottom: 1rem; }
-    .card:hover { transform: translateY(-5px); }
+/* Navigation */
+nav {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:20px 8%;
+  position:fixed;
+  width:100%;
+  background:white;
+  border-bottom:1px solid #eee;
+  z-index:1000;
+}
 
-    /* Contact / Inquiry Form */
-    .contact { padding: 5rem 2rem; text-align: center; background: #f5f5f5; }
-    .contact h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; margin-bottom: 2rem; }
-    form { max-width: 500px; margin: 0 auto; display: flex; flex-direction: column; gap: 1rem; }
-    input, textarea { padding: 0.75rem; border-radius: 5px; border: 1px solid #ccc; background: #fff; color: #000; font-size: 1rem; }
-    input::placeholder, textarea::placeholder { color: #888; }
-    button.submit { padding: 0.75rem; background-color: #000; color: #fff; font-weight: 600; border: none; border-radius: 5px; cursor: pointer; }
-    button.submit:hover { background-color: #333; }
+.logo {
+  font-family:'DM Serif Display', serif;
+  font-size:28px;
+}
 
-    /* Footer */
-    footer { padding: 2rem; text-align: center; border-top: 1px solid #ddd; font-size: 0.9rem; color: #555; }
+nav ul {
+  display:flex;
+  gap:30px;
+  list-style:none;
+}
 
-    /* Responsive */
-    @media(max-width: 768px) { 
-      .menu-cards { flex-direction: column; align-items: center; }
-      nav ul { flex-direction: column; gap: 1rem; margin-top: 1rem; }
-      .hero h1 { font-size: 2.2rem; }
-    }
-  </style>
+nav a {
+  text-decoration:none;
+  color:black;
+  font-weight:500;
+  transition:0.3s;
+}
+
+nav a:hover { opacity:.6; }
+
+/* Hero */
+.hero {
+  height:100vh;
+  background:url('https://images.unsplash.com/photo-1551024506-0bccd828d307?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:0 8%;
+  position:relative;
+}
+
+.hero::after {
+  content:'';
+  position:absolute;
+  inset:0;
+  background:rgba(255,255,255,0.65);
+}
+
+.hero-content {
+  position:relative;
+  z-index:2;
+  max-width:800px;
+}
+
+.hero h1 {
+  font-family:'DM Serif Display', serif;
+  font-size:60px;
+  margin-bottom:20px;
+}
+
+.hero p {
+  font-size:18px;
+  margin-bottom:30px;
+}
+
+.hero button {
+  padding:14px 35px;
+  background:black;
+  color:white;
+  border:none;
+  font-weight:500;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.hero button:hover { background:#333; }
+
+/* Sections */
+section { padding:100px 8%; text-align:center; }
+
+h2 {
+  font-family:'DM Serif Display', serif;
+  font-size:42px;
+  margin-bottom:30px;
+}
+
+/* About */
+.about p {
+  max-width:700px;
+  margin:auto;
+  font-size:17px;
+}
+
+/* Menu */
+.menu-container {
+  display:flex;
+  gap:40px;
+  flex-wrap:wrap;
+  justify-content:center;
+  margin-top:40px;
+}
+
+.menu-item {
+  width:320px;
+  overflow:hidden;
+  border-radius:10px;
+  transition:0.4s;
+}
+
+.menu-item img {
+  width:100%;
+  height:350px;
+  object-fit:cover;
+  border-radius:10px;
+  transition:0.4s;
+}
+
+.menu-item:hover img {
+  transform:scale(1.05);
+}
+
+.menu-item h3 {
+  margin-top:15px;
+  font-family:'DM Serif Display', serif;
+  font-size:26px;
+}
+
+/* Contact */
+.contact {
+  background:#f7f7f7;
+}
+
+form {
+  max-width:500px;
+  margin:auto;
+  display:flex;
+  flex-direction:column;
+  gap:15px;
+  margin-top:30px;
+}
+
+input, textarea {
+  padding:12px;
+  border:1px solid #ccc;
+  font-family:'Poppins', sans-serif;
+}
+
+button.submit-btn {
+  background:black;
+  color:white;
+  border:none;
+  padding:14px;
+  font-weight:500;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+button.submit-btn:hover { background:#333; }
+
+/* Footer */
+footer {
+  padding:40px;
+  text-align:center;
+  border-top:1px solid #eee;
+  font-size:14px;
+}
+
+/* Responsive */
+@media(max-width:768px){
+  .hero h1 { font-size:38px; }
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">Franco Events</div>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#menu">Menu</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+<nav>
+  <div class="logo">Franco Events</div>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#menu">Menu</a></li>
+    <li><a href="#contact">Inquiry</a></li>
+  </ul>
+</nav>
 
-  <!-- Hero -->
-  <section class="hero" id="home">
-    <h1>Mini Pancakes, Mexican Elote & Charcuterie</h1>
-    <p>Perfect snacks & boards for every event</p>
-    <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Inquire Now</button>
-  </section>
+<section class="hero">
+  <div class="hero-content">
+    <h1>Elevated Snacks for Every Celebration</h1>
+    <p>Mini pancakes, Mexican elote, and luxury charcuterie cart experiences designed to elevate weddings, birthdays, and corporate events.</p>
+    <button onclick="document.getElementById('contact').scrollIntoView()">Inquire Now</button>
+  </div>
+</section>
 
-  <!-- About -->
-  <section class="about" id="about">
-    <h2>About Us</h2>
-    <p>We are a local Tulsa business ready to serve any type of celebration, big or small. From birthdays to corporate events, Franco Events brings delicious snacks and beautifully curated charcuterie boards to make your event unforgettable.</p>
-    <img src="https://img.icons8.com/ios-filled/100/000000/party.png" alt="party clipart" />
-  </section>
+<section class="about" id="about">
+  <h2>About Us</h2>
+  <p>
+    We are a local Tulsa business ready to serve any type of celebration, big or small.
+    From birthdays and weddings to corporate gatherings, Franco Events brings beautifully styled snack carts
+    and curated charcuterie experiences that make every event unforgettable.
+  </p>
+</section>
 
-  <!-- Menu -->
-  <section class="menu" id="menu">
-    <h2>Our Offerings</h2>
-    <div class="menu-cards">
-      <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/pancakes.png" alt="mini pancakes">
-        <h3>Mini Pancakes</h3>
-        <p>Fluffy mini pancakes with fresh fruits, chocolate drizzle, and whipped cream.</p>
-      </div>
-      <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/corn.png" alt="Mexican elote">
-        <h3>Mexican Elote</h3>
-        <p>Classic street-style corn with mayo, cheese, chili powder, and lime.</p>
-      </div>
-      <div class="card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/cheese.png" alt="charcuterie">
-        <h3>Charcuterie</h3>
-        <p>Gourmet boards with cheeses, meats, fruits, and nuts for any occasion.</p>
-      </div>
+<section class="menu" id="menu">
+  <h2>Our Offerings</h2>
+  <div class="menu-container">
+
+    <div class="menu-item">
+      <img src="https://images.unsplash.com/photo-1587731957309-1a5f4b2b6f6e?auto=format&fit=crop&w=800&q=80">
+      <h3>Mini Pancakes</h3>
     </div>
-  </section>
 
-  <!-- Contact / Inquiry Form -->
-  <section class="contact" id="contact">
-    <h2>Send an Inquiry</h2>
-    <form action="https://formspree.io/f/yourformid" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="_replyto" placeholder="Your Email" required>
-      <input type="text" name="eventtype" placeholder="Event Type" required>
-      <input type="date" name="eventdate" required>
-      <textarea name="message" rows="4" placeholder="Additional Details"></textarea>
-      <button type="submit" class="submit">Send Inquiry</button>
-    </form>
-  </section>
+    <div class="menu-item">
+      <img src="https://images.unsplash.com/photo-1604908177522-402bb70f52e3?auto=format&fit=crop&w=800&q=80">
+      <h3>Mexican Elote</h3>
+    </div>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2026 Franco Events | All Rights Reserved
-  </footer>
+    <div class="menu-item">
+      <img src="https://images.unsplash.com/photo-1600891963935-cd3e45b1a9d3?auto=format&fit=crop&w=800&q=80">
+      <h3>Charcuterie Cart</h3>
+    </div>
+
+  </div>
+</section>
+
+<section class="contact" id="contact">
+  <h2>Send an Inquiry</h2>
+  <form action="https://formspree.io/f/yourformid" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="_replyto" placeholder="Your Email" required>
+    <input type="text" name="eventtype" placeholder="Event Type" required>
+    <input type="date" name="eventdate" required>
+    <textarea name="message" rows="4" placeholder="Tell us about your event"></textarea>
+    <button type="submit" class="submit-btn">Submit Inquiry</button>
+  </form>
+</section>
+
+<footer>
+  © 2026 Franco Events | Tulsa, Oklahoma
+</footer>
 
 </body>
 </html>
+
 
