--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
 
     <header>
         <div class="subtitle">Tulsa's Premier</div>
-        <h1>Luxe Cart Events</h1>
+        <h1>Franco Events </h1>
         <p>Elevating your celebrations, one bite at a time.</p>
     </header>
 
     <section id="about">
         <h2 class="section-title">Our Story</h2>
         <div class="about-text">
-            <p>Based in the heart of <strong>Tulsa</strong>, we specialize in luxury event snack carts that bring both flavor and flair to your most cherished moments. Whether it's a dream wedding, a modern bridal shower, or an intimate private party, we believe every detail should be exquisite. We would love to be a part of your next special event.</p>
+            <p>Based in the heart of <strong>Tulsa</strong>, we specialize in luxury event snack carts that bring both flavor and flair to your most cherished moments. Whether it's your dream wedding, bridal showers, or an intimate private party, we believe every detail should be exquisite. We would love to be a part of your next special event.</p>
         </div>
     </section>
 
@@ -181,3 +181,4 @@
 
 </body>
 </html>
+
