--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxe Cart Events | Tulsa</title>
+    <title>Franco Events | Tulsa</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -176,9 +176,10 @@
     </section>
 
     <footer>
-        &copy; 2026 LUXE CART EVENTS | TULSA, OK
+        &copy; 2026 FRANCO EVENTS | TULSA, OK
     </footer>
 
 </body>
 </html>
+
 
