--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </header>
 
     <section id="about">
-        <h2 class="section-title">Our Story</h2>
+        <h2 class="section-title">About Us</h2>
         <div class="about-text">
             <p>Based in the heart of <strong>Tulsa</strong>, we specialize in luxury event snack carts that bring both flavor and flair to your most cherished moments. Whether it's your dream wedding, bridal showers, or an intimate private party, we believe every detail should be exquisite. We would love to be a part of your next special event.</p>
         </div>
@@ -181,5 +181,6 @@
 
 </body>
 </html>
+
 
 
